--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
+attrs==23.1.0
 blinker==1.6.2
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+cryptography==40.0.2
 Flask==2.3.2
+flask-expects-json==1.7.0
+Flask-json-schema==0.0.5
+Flask-JsonSchemaValidator==0.3.0
+Flask-JWT-Extended==4.4.4
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonify==0.5
+jsonschema==4.17.3
 MarkupSafe==2.1.2
+pycparser==2.21
 PyJWT==2.7.0
+pyrsistent==0.19.3
 requests==2.30.0
 urllib3==2.0.2
 Werkzeug==2.3.4
